# authAadhaar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  setup.cfg
authaadhaar/: __init__.py  client.py  data.py  encrypt.py  input.py  request.py  session.py  test.py  typing.py  typing.pyi
resources/certs/: uidai_auth_prod.cer  uidai_auth_sign_prod_2023.cer
resources/formats/: README.md  input.pid.xml  input.xml  response.xml
samples/formats/: input.pid.xml
samples/php/: encrypt.php
tests/: test_authaadhaar.py
