[tool.poetry]
name = "authAadhaar"
version = "0.1.0"
description = "Aadhaar Authentication/Verification using Python"
authors = ["Nikhil John <nikhiljohn1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
cryptography = "^3.4.7"
requests = "^2.26.0"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
taskipy = "^1.8.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | poetry.lock
)
'''

[tool.taskipy.tasks]
main = "python app.py"
test = "pytest"
lint = "pre-commit run --all-files"
